# AutoAgenticML

./: .dockerignore  .gitignore  Dockerfile  HumanNodes.py  ModelResponseSchema.py  Nodes.py  Orchestrators.py  README.md  analysis.py  compose.yaml  descriptive.py  evaluator.py  fix_html.py  main.py  preprocess.py  promptTemplate.py  pyproject.toml  trainer.py
Dataset/: Registry.py
backend/: api_server.py  pipeline_manager.py  pipeline_wrapper.py
frontend/: index.html  index.html.backup  pipeline.html  pipeline.html.backup
frontend/css/: styles.css
frontend/js/: app.js  modals.js  pipeline.js  websocket.js
