[project]
name = "agenticml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.5",
    "langsmith>=0.5.0",
    "matplotlib>=3.10.8",
    "mcp>=1.25.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "statsmodels>=0.14.6",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]
